# RAM

./: README.md  pyproject.toml
memory_engine/: __init__.py  bridge_battery.py  design_engine.py  dram_physics.py  observer.py  presets.py  schema.py  sense_amplifier.py  sram_physics.py
tests/: test_bridge_battery.py  test_memory_engine.py  test_scenarios.py
