[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "memory-engine"
version = "0.1.0"
description = "DRAM / SRAM 메모리 설계·시뮬레이션·검증 엔진"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
